# StorageSifter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  assess.rs  main.rs  ops.rs  player.rs  scan.rs  settings.rs  theme.rs  treemap_view.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  mounts.rs  safety.rs  tree.rs  walk.rs
crates/scanner/tests/: scan.rs
crates/treemap/: Cargo.toml
crates/treemap/examples/: canonical_svg.rs
crates/treemap/src/: lib.rs  squarify.rs
packaging/: com.fopull.StorageSifter.desktop  com.fopull.StorageSifter.metainfo.xml
packaging/appimage/: build-appimage.sh
packaging/aur/: README.md
packaging/aur/storagesifter/: .SRCINFO  PKGBUILD
packaging/aur/storagesifter-bin/: .SRCINFO  PKGBUILD
