[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "StorageSifter desktop UI (eframe/egui on the wgpu backend)."
default-run = "storagesifter"

[[bin]]
name = "storagesifter"
path = "src/main.rs"

[dependencies]
# egui + the wgpu (Vulkan) backend. glow is disabled; wayland + x11 cover the
# Linux session types. egui itself is re-exported as `eframe::egui`.
eframe = { version = "=0.34.3", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
scanner = { path = "../scanner" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sysinfo = { version = "=0.39.5", default-features = false, features = ["disk"] }
trash = { version = "=5.2.6", default-features = false }
treemap = { path = "../treemap" }

[dev-dependencies]
tempfile = "=3.27.0"
