[package]
name = "storagesifter"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "StorageSifter desktop UI (eframe/egui on the wgpu backend)."
default-run = "storagesifter"

[[bin]]
name = "storagesifter"
path = "src/main.rs"

[dependencies]
# egui + the wgpu (Vulkan) backend. glow is disabled; wayland + x11 cover the
# Linux session types. egui itself is re-exported as `eframe::egui`.
eframe = { version = "=0.34.3", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
# Decodes the embedded window icon (PNG → RGBA8). eframe already pulls `image`
# transitively, so pinning to its resolved version adds no extra build cost.
image = { version = "=0.25.10", default-features = false, features = ["png"] }
# In-app audio playback (pure-Rust decode via Symphonia, output via cpal/ALSA —
# present on every Linux desktop, so the binary stays self-contained).
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
# Used directly only to read accurate track durations: rodio 0.20's own
# `total_duration` mis-converts Symphonia's time (whole-second files come back
# inflated). Same version rodio already pulls, so no extra build cost.
symphonia = { version = "=0.5.5", default-features = false, features = ["aac", "adpcm", "aiff", "alac", "flac", "isomp4", "mkv", "mp3", "ogg", "pcm", "vorbis", "wav"] }
scanner = { path = "../scanner" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sysinfo = { version = "=0.39.5", default-features = false, features = ["disk"] }
trash = { version = "=5.2.6", default-features = false }
treemap = { path = "../treemap" }

[dev-dependencies]
tempfile = "=3.27.0"
