[package]
name = "scanner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel, single-filesystem disk-usage scanner for StorageSifter."

[dependencies]
rayon = "=1.12.0"        # parallel directory walk
rustc-hash = "=2.1.2"    # fast FxHashSet for (dev, ino) hard-link de-dup

[dev-dependencies]
tempfile = "=3.27.0"     # throwaway fixtures for the scanner tests

[[bin]]
name = "scan"
path = "src/bin/scan.rs"
